Added jmh benchmark